[package]
name = "maranta"
version = "0.1.0"
edition = "2024"
description = "Ephemeral zooming/presenting tool"
repository = "https://github.com/tulilirockz/maranta"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["sdl", "wayland"]
categories = ["games", "development-tool", "graphics"]


[dependencies]
ashpd = "0.12.0"
sdl3 = { version = "0", features = ["image"] }
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5.12.0", features = ["tokio"] }

